Fix welcome message on Safari (for real this time)

--- a/public/style.css
+++ b/public/style.css
@@ -837,10 +837,6 @@ body.big-avatars .avatar img {
 br {
     display: block;
     margin: 2px 0;
-    line-height: 0;
-    height: 0;
-    padding: 0;
-    content: '';
 }
 
 textarea {
